@@ -4,6 +4,8 @@ Revision history for UtilSY
 		- made check_defined method and changed is_defined to return a bool
 		- added specific file checks
 		- added specific directory checks
+        - added name argument to file and dir checks to better describe what
+          is being checked
 
 0.0.1  Sat Oct 29 10:25:29 2016
        Initial release.
